--- a/Resources/views/Block/html_modify.html.twig
+++ b/Resources/views/Block/html_modify.html.twig
@@ -1,2 +1,2 @@
 {{ form_widget(form) }}
-{{ notifyDisplayHooks(constant('Zikula\\BlocksModule\\HookSubscriber\\UiHooksSubscriber::HTMLBLOCK_EDIT_FORM'), form.vars.value.bid|default(null)) }}
+{{ notifyDisplayHooks(constant('Zikula\\StaticContentModule\\HookSubscriber\\UiHooksSubscriber::HTMLBLOCK_EDIT_FORM'), form.vars.value.bid|default(null)) }}
