remove some obsolete concepts

--- a/Resources/views/welcome.html.twig
+++ b/Resources/views/welcome.html.twig
@@ -19,7 +19,7 @@
         <strong>{% trans %}Extensibility{% endtrans %}:</strong> {% trans %}you get a standard application-programming interface (API) that lets you easily extend your site's functionality through modules{% endtrans %}
     </li>
     <li>
-        <strong>{% trans %}More{% endtrans %}:</strong> {% trans %}Admin UI, global categories, site-wide search, content blocks, menu creation, and more!{% endtrans %}
+        <strong>{% trans %}More{% endtrans %}:</strong> {% trans %}Admin UI, global categories, and more!{% endtrans %}
     </li>
     <li>
         <strong>{% trans %}Support{% endtrans %}:</strong> {% trans with {'%zikula-link%': '<a href="https://ziku.la">Zikula</a>', '%github-link%': '<a href="https://github.com/zikula/core">Github</a>', '%slack-link%': '<a href="https://zikula.slack.com/">Slack</a>'} %}you can get help and support from the Zikula community of webmasters and developers at %zikula-link%, %github-link% and %slack-link%.{% endtrans %}
